# toolset

./: .containerignore  .gitignore  .gitmodules  CLI_SUMMARY.md  CONTAINER.md  Containerfile  Makefile  README.md  README_SIMPLIFIED.md  container-entrypoint.sh  devbox.json  install.sh  podman-build.sh  pyproject.toml  pytest.ini  requirements.txt  start_api.sh
.cursor/: rules
.logs/: .gitignore
.secrets/: .gitignore
src/api/: auth_service.py  main.py  ssh_config_service.py  system.py  tool_service.py  toolset.py
src/cli/: __init__.py  app.py  simplified_app.py
src/nebula_cli/: __init__.py  app.py  auth.py  database.py  instance_manager.py  logger.py  ssh_config_manager.py
tasks/: 2025-09-04-add-logging-framework.json  2025-09-04-cli-authentication.json  2025-09-04-instance-manager-feature.json  2025-09-04-update-readme.json  2025-09-04-update-ssh-config-on-instance-creation.json  2025-09-05-rework-ssh-update-feature.json  2025-09-06-refactor-cli-to-api-service.json  2025-10-04-simplify-cli-vm-actions.json  _blank_task.json  _schema.json  _status.json
tests/: __init__.py  conftest.py
tests/unit/: test_instance_mapping.py  test_ssh_config_manager.py
tools/example_tool/: __init__.py  main.py
tools/gcp_vm_manager/: README.md  main.py  requirements.txt
tools/gcp_worker_monitor/: README.md  __init__.py  main.py
tools/list_gcp_workers/: README.md  main.py  requirements.txt
